--- a/et3.tex
+++ b/et3.tex
@@ -1,5 +1,4 @@
-% Created 2023-05-17 Wed 16:57
-% Intended LaTeX compiler: pdflatex
+% Created 2023-05-18 Thu 08:11
 \documentclass[9pt, b5paper]{article}
 \usepackage{xeCJK}
 \usepackage[T1]{fontenc}
@@ -27,12 +26,9 @@
 \date{\today}
 \title{ET 框架学习笔记（二）－－网络交互相关}
 \hypersetup{
- pdfauthor={deepwaterooo},
- pdftitle={ET 框架学习笔记（二）－－网络交互相关},
- pdfkeywords={},
- pdfsubject={},
- pdfcreator={Emacs 28.2 (Org mode 9.5.5)}, 
- pdflang={English}}
+  pdfkeywords={},
+  pdfsubject={},
+  pdfcreator={Emacs 28.2 (Org mode 8.2.7c)}}
 \begin{document}
 
 \maketitle
@@ -40,19 +36,19 @@
 
 
 \section{ET7 数据库相关【服务端】}
-\label{sec:org6ca4215}
+\label{sec-1}
 \begin{itemize}
 \item 这个数据库系统，连个添加使用的范例也没有。。。就两个组件，一个管理类。什么也没留下。。
 \item 这里不急着整理。现框架 \textbf{DB 放在服务端的Model} 里。它的管理体系成为管理各个不同区服的数据库 DBComponent。
 \item 因为找不到任何参考使用的例子。我觉得需要搜索一下。在理解了参考项目数据库模块之后，根据搜索，决定是使用原参考项目总服务器代理系，还是这种相对改装了的管理区服系统？
 \end{itemize}
 \subsection{IDBCollection: 主要是方便写两个不同的数据库（好像是GeekServer 里两个数据库）。反正方便扩展吧}
-\label{sec:orgf0b560b}
+\label{sec-1-1}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
 public interface IDBCollection {}
 \end{minted}
 \subsection{DBComponent: 带生成系。可以查表，查询数据}
-\label{sec:orga03cdc7}
+\label{sec-1-2}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
 [ChildOf(typeof(DBManagerComponent))] // 用来缓存数据
 public class DBComponent: Entity, IAwake<string, string, int>, IDestroy {
@@ -62,7 +58,7 @@ public class DBComponent: Entity, IAwake<string, string, int>, IDestroy {
 }
 \end{minted}
 \subsection{DBManagerComponent: 有上面的 DBComponent 数组。数组长度固定吗？}
-\label{sec:orge4c9bf9}
+\label{sec-1-3}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
 public class DBManagerComponent: Entity, IAwake, IDestroy {
     [StaticField]
@@ -71,7 +67,7 @@ public class DBManagerComponent: Entity, IAwake, IDestroy {
 }
 \end{minted}
 \subsection{DBManagerComponentSystem: 主是要查询某个区服的数据库，从数组里}
-\label{sec:org8902fbe}
+\label{sec-1-4}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
 [FriendOf(typeof(DBManagerComponent))]
 public static class DBManagerComponentSystem {
@@ -101,7 +97,7 @@ public static class DBManagerComponentSystem {
 }
 \end{minted}
 \subsection{DBProxyComponent: 【参考项目】里的。有生成系。}
-\label{sec:orgdf9f6f2}
+\label{sec-1-5}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
 // 用来与数据库操作代理
 public class DBProxyComponent: Component {
@@ -110,7 +106,7 @@ public class DBProxyComponent: Component {
 \end{minted}
 
 \section{StartConfigComponent: 找【各种服】的起始初始化地址}
-\label{sec:org529da8f}
+\label{sec-2}
 \begin{itemize}
 \item 这些组群服务器的起始被全部重构了，重构成配置单例了
 \item 这里是，昨天之前理这部分的时候，理得不够透彻。去重构一个服的初始化与配置，就需要理清、找到这个服所关联的所有的起始配置相关。昨天之前做得还不够好。
@@ -118,7 +114,7 @@ public class DBProxyComponent: Component {
 \item 今天早上的脑袋还是相对比较清醒，就把这块儿对自己来说相对不够熟悉相对难点儿的，再看一遍，希望有更多的收获！
 \end{itemize}
 \subsection{ConfigSingleton<T>: ProtoObject, ISingleton}
-\label{sec:org1cdd8fe}
+\label{sec-2-1}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
 public abstract class ConfigSingleton<T>: ProtoObject, ISingleton where T: ConfigSingleton<T>, new() {
         [StaticField]
@@ -147,7 +143,7 @@ public abstract class ConfigSingleton<T>: ProtoObject, ISingleton where T: Confi
     }
 \end{minted}
 \subsection{SceneFactory 里可以给【匹配服】添加组件}
-\label{sec:orge8ea462}
+\label{sec-2-2}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
 public static class SceneFactory {
     public static async ETTask<Scene> CreateServerScene(Entity parent, long id, long instanceId, int zone, string name, SceneType sceneType, StartSceneConfig startSceneConfig = null) {
@@ -186,7 +182,7 @@ public static class SceneFactory {
 }
 \end{minted}
 \subsection{RouterAddressComponent: 路由器组件}
-\label{sec:org1b0523a}
+\label{sec-2-3}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
 [ComponentOf(typeof(Scene))]
 public class RouterAddressComponent: Entity, IAwake<string, int> {
@@ -198,7 +194,7 @@ public class RouterAddressComponent: Entity, IAwake<string, int> {
 }
 \end{minted}
 \subsection{RouterAddressComponentSystem: 路由器的生成系}
-\label{sec:orgc2d657d}
+\label{sec-2-4}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
 [FriendOf(typeof(RouterAddressComponent))]
 public static class RouterAddressComponentSystem {
@@ -255,7 +251,7 @@ public static class RouterAddressComponentSystem {
 \end{minted}
 
 \subsection{RouterHelper: 路由器帮助类，向路由器注册、申请？}
-\label{sec:org4dc0e8c}
+\label{sec-2-5}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
 public static class RouterHelper {
     // 注册router
@@ -331,7 +327,7 @@ public static class RouterHelper {
 \end{minted}
 
 \subsection{StartProcessConfigCategory : ConfigSingleton<StartProcessConfigCategory>, IMerge: 【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】}
-\label{sec:org8af9e88}
+\label{sec-2-6}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
 [ProtoContract]
 [Config]
@@ -386,7 +382,7 @@ public partial class StartProcessConfig: ProtoObject, IConfig {
 }
 \end{minted}
 \subsection{StartSceneConfig: ISupportInitialize 【各种服－配置，场景配置】}
-\label{sec:org3be4504}
+\label{sec-2-7}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
 public partial class StartSceneConfig: ISupportInitialize {
     public long InstanceId;
@@ -430,7 +426,7 @@ public partial class StartSceneConfig: ISupportInitialize {
 }
 \end{minted}
 \subsection{StartSceneConfigCategory : 【Matchs!】ConfigSingleton<StartSceneConfigCategory>, IMerge}
-\label{sec:orgdedf08b}
+\label{sec-2-8}
 \begin{itemize}
 \item 读里面的登录服，会知道它是如何管理登录服的（就是后面的例子，当它要拿登录服的地址的时候），它们是区服，就是分各个小区管理。如果集群是这个样子，大概匹配服也就是一样分小区管理了。
 \item 那么这个配置管理里，因为我要用匹配服与地图服，也要对至少是匹配服进行管理。那么，我在申请匹配的时候，网关服才能拿到匹配服的地址。
@@ -493,7 +489,7 @@ public partial class StartSceneConfigCategory {
 }
 \end{minted}
 \subsection{HttpGetRouterResponse: 这个 ProtoBuf 的消息类型}
-\label{sec:orga96f7cd}
+\label{sec-2-9}
 \begin{itemize}
 \item 框架里，有个专用的路由器管理器场景（服），对路由器，或说各种服的地址进行管理
 \item 主要是方便，一个路由器管理组件，来自顶向下地获取，各小区所有路由器地址的？想来当组件要拿地址时，每个小区分服都把自己的地址以消息的形式传回去的？
@@ -514,7 +510,7 @@ message HttpGetRouterResponse { // 这里，是 Outer proto 里的消息定义
 }
 \end{minted}
 \subsection{HttpGetRouterHandler : IHttpHandler: 获取各路由器的地址}
-\label{sec:org1067867}
+\label{sec-2-10}
 \begin{itemize}
 \item 【匹配服】：因为我想拿这个服的地址，也需要这个帮助类里作相应的修改
 \item StartSceneConfigCategory.Instance: 不明白这个实例是存放在哪里，因为可以 proto 消息进程间传递，那么可以试找，哪里调用这个帮助类拿东西？
@@ -544,7 +540,7 @@ public class HttpGetRouterHandler : IHttpHandler {
 \end{minted}
 \end{itemize}
 \subsection{HttpHandler 标签系：标签自带场景类型}
-\label{sec:org7090ba6}
+\label{sec-2-11}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
 public class HttpHandlerAttribute: BaseAttribute {
     public SceneType SceneType { get; }
@@ -556,7 +552,7 @@ public class HttpHandlerAttribute: BaseAttribute {
 }
 \end{minted}
 \subsection{LoginHelper: 登录服的获取地址的方式来获取匹配服的地址了。全框架只有这一个黄金案例}
-\label{sec:orgdb3c067}
+\label{sec-2-12}
 \begin{itemize}
 \item 这个是用户登录前，还没能与网关服建立起任何关系，可能会不得不绕得复杂一点儿
 \item 这个地方，有点儿奇怪的是：RouterAddressComponent 这个组件，找不到添加的地方。它可能有点儿特殊，就是它不走常规 AddComponent<>() 的方法添加，所以找不到添加，而只有获取。
@@ -596,7 +592,7 @@ public static class LoginHelper {
 **
 
 \section{服务器的功能概述：各服务器的作用（这个不是ET7 版本的，以前的）}
-\label{sec:org51a5ec1}
+\label{sec-3}
 \begin{itemize}
 \item Manager：连接客户端的外网和连接内部服务器的内网，对服务器进程进行管理，自动检测和启动服务器进程。加载有内网组件NetInnerComponent，外网组件NetOuterComponent，服务器进程管理组件。自动启动突然停止运行的服务器，保证此服务器管理的其它服务器崩溃后能及时自动启动运行。
 \item Realm：对Actor消息进行管理（添加、移除、分发等），连接内网和外网，对内网服务器进程进行操作，随机分配Gate服务器地址。内网组件NetInnerComponent，外网组件NetOuterComponent，Gate服务器随机分发组件。客户端登录时连接的第一个服务器，也可称为登录服务器。
@@ -608,7 +604,7 @@ public static class LoginHelper {
 \end{itemize}
 
 \section{Protobuf 相关，【Protobuf 里进程间传递的游戏数据相关信息：两个思路】}
-\label{sec:org99e151e}
+\label{sec-4}
 \begin{itemize}
 \item 【一、】查找 enum 可能可以用系统平台下的 protoc 来代为生成，效果差不多。只起现 Proto2CS.cs 编译的补充作用。
 \item 【二、】Card 类下的两个 enum 变量，在ILRuntime 热更新库下，还是需要帮它连一下的。用的是 HybridCLR
@@ -627,7 +623,7 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 \end{itemize}
 
 \section{写在最后：反而是自己每天查看一再更新的}
-\label{sec:orgf0cbd66}
+\label{sec-5}
 \begin{itemize}
 \item 因为感觉还是不曾系统性地读ET7 的源码，或者说有效阅读，因为没有带着实际问题的看源码，感觉都不叫看读源码呀。这里会记自己的感觉需要赶快查看的地方。
 \item 【ET 框架的整体架构】：感觉把握不够。常常命名空间分不清。要把这个大的框架，比较高层面的架构再好好看下。然后就是对自顶向下的不同层级场景，所需要的主要的不同组件，分不清，仍需要再熟悉一下源码
@@ -637,7 +633,7 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 \item 【UIType】部分类：这个类出现在了三四个不同的程序域，现在重构了，好像添加得不对。要再修改
 \end{itemize}
 \section{现在的修改内容：}
-\label{sec:org24784ef}
+\label{sec-6}
 \begin{itemize}
 \item \textbf{【Windows 下 proto2cs 消息转化】} ：上面拿匹配服地址，一个路由器相关消息加了参数，要重新生成一下。这个 mac 系统下不难，改天有时间也可以把 mac 下的运行环境配置好，这个功能模块就不用一定要切换电脑了。【手动做了一下】
 \item \textbf{【UILobbyComponent 可以测试】} ：这个大厅组件，Unity 里预设简单，可以试运行一下，看是否完全消除这个UI 组件的报错，这个屏的控件能否显示出来？还是错出得早，这个屏就出不来已经报错了？
@@ -659,7 +655,7 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 \item 【活宝妹坐等亲爱的表哥，领娶活宝妹回家！爱表哥，爱生活！！！】
 \end{itemize}
 \section{{\bfseries\sffamily TODO} 其它的：部分完成，或是待完成的大的功能版块，列举}
-\label{sec:orgb369890}
+\label{sec-7}
 \begin{itemize}
 \item emacs 那天我弄了好久，把C-; ISpell 原定绑定的功能解除，重新绑定为自己喜欢的 expand-region. 今天第二次再弄，看一下几分钟能够解决完问题？我的这个破烂记性呀。。。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】mingw64 lisp/textmode/flyspell.el 键的重新绑定。这下记住了。还好，花得不是太久。有以前的笔记 
 \begin{itemize}
@@ -672,7 +668,7 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 \item 【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
 \end{itemize}
 \section{拖拉机游戏：【重构OOP/OOD 设计思路】}
-\label{sec:orge09c633}
+\label{sec-8}
 \begin{itemize}
 \item 自己是学过，有这方面的意识，但并不是说，自己就懂得，就知道该如何狠好地设计这些类。现在更多的是要受ET 框架，以及参考游戏手牌设计的启发，来帮助自己一再梳理思路，该如何设计它。
 \item ET7 重构里，各组件都该是自己设计重构原项目的类的设计的必要起点。可以根据这些来系统设计重构。【活宝妹就是一定要嫁给亲爱的表哥！！！】
@@ -681,4 +677,5 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 \item 【拖拉机游戏房间】：
 \item 【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！爱表哥，爱生活！！！】
 \end{itemize}
+% Emacs 28.2 (Org mode 8.2.7c)
 \end{document}
